tools/tests/ui/fail/l1020.cnf
// Test file for error code: L1020
// Expected error: Invalid BINARY-BLOB character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
